# rust-baazar

./: README.md
byzantine-vault/: Cargo.toml  docker-compose.yml  prova.txt  prova2.txt
byzantine-vault/migrations/: 20250210171454_init.sql
byzantine-vault/src/: main.rs  routes.rs
lionheart-armory/: .env  Cargo.toml
lionheart-armory/migrations/: 20250214110557_init.sql
lionheart-armory/src/: handlers.rs  main.rs  middleware.rs  routes.rs  token.rs
lionheart-armory/src/handlers/: auth.rs  weapon.rs
lionheart-armory/src/models/: user.rs  weapon.rs
runestone/migrations/: 20250206184119_runestone.sql
runestone/src/: routes.rs
rust-lang/archimedes-mq/: Cargo.toml  sensor_log.txt
rust-lang/archimedes-mq/mosquitto/: docker-compose.yml
rust-lang/archimedes-mq/src/: main.rs
rust-lang/byzantine-vault/: .env  Cargo.toml
rust-lang/byzantine-vault/src/: handlers.rs  main.rs  models.rs  routes.rs  token.rs
rust-lang/grrs/: text.txt
rust-lang/grrs/src/: main.rs
rust-lang/runestone/: .env  Cargo.toml
rust-lang/runestone/migrations/: 20250206184119_runestone.sql
rust-lang/runestone/src/: main.rs  model.rs
