[package]
name = "byzantine-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = {version = "1.43.0", features = ["full"]}
sqlx = {version = "0.8.3", features = ["postgres","runtime-tokio","tls-native-tls","macros","chrono","uuid"]}
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
dotenv = "0.15.0"
chrono = {version = "0.4.39", features = ["serde"]}
jsonwebtoken = "9.3.1"
bcrypt = "0.17.0"
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = {version = "1.13.1", features = ["serde"]}